fix: use Android-compatible file reads